<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.showmanager.features.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/home_logo"
            android:layout_marginTop="@dimen/home_logo_margin_top"
            android:layout_width="@dimen/home_logo_width"
            android:layout_height="@dimen/home_logo_height"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/logo_transition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/splash_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/home_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:transitionName="@string/title_label_transition"
            android:text="@string/show_manager"
            app:layout_constraintTop_toBottomOf="@id/home_logo"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/splash_label_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_shows"
            android:layout_marginTop="@dimen/home_add_new_shows_margin_top"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/add_new_tv_show"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/home_label"
            android:onClick="@{(view) -> viewModel.onViewClicked(view)}"
            style="@style/Button.Outlined"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_added_shows"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/show_list_of_added_shows"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/add_new_shows"
            android:onClick="@{(view) -> viewModel.onViewClicked(view)}"
            style="@style/Button.Filled"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>