<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.showmanager.features.addshow.NewShowViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".features.addshow.NewShowFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:elevation="0dp"

            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:title="@string/add_new_show"
                app:navigationIcon="@drawable/arrow_back"
                app:navigationOnClickListener="@{(view) -> viewModel.onViewClicked(view)}" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_show"
            style="@style/Edittext.Filled"
            android:layout_width="match_parent"
            android:hint="@string/tv_show"
            android:text="@={viewModel.title}"
            android:layout_height="@dimen/edittext_height"
            android:layout_margin="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/seasons"
            style="@style/Edittext.Filled"
            android:layout_width="match_parent"
            android:hint="@string/seasons"
            android:text="@={viewModel.seasons}"
            android:inputType="number"
            android:layout_height="@dimen/edittext_height"
            android:layout_margin="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/release_date"
            style="@style/Edittext.Filled"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_margin="@dimen/default_margin"
            android:clickable="true"
            android:hint="@string/release_date"
            android:text="@{viewModel.releaseDate}"
            android:focusable="false"
            android:onClick="@{(view) -> viewModel.onViewClicked(view)}"
            tools:ignore="KeyboardInaccessibleWidget" />

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/add_show"
            android:layout_marginTop="@dimen/button_height"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/add_show"
            app:lb_isShadowEnable="false"
            app:lb_buttonColor="@color/primary"
            app:lb_cornerRadius="@dimen/button_radius"
            app:loading="@{viewModel.state.loading}"
            android:enabled="@{viewModel.state.fieldsCompleted}"
            android:textAlignment="center"
            android:onClick="@{(view) -> viewModel.onViewClicked(view)}"
            style="@style/Button.Filled"/>


    </LinearLayout>
</layout>